kubernetes/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whattoeat-frontend
  namespace: default
  labels:
    app: whattoeat-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whattoeat-frontend
  template:
    metadata:
      labels:
        app: whattoeat-frontend
    spec:
      containers:
      - name: whattoeat-frontend
        image: baotg0502/devsecops:83e7f72
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
