kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whattoeat-frontend
  namespace: default
spec:
  selector:
    app: whattoeat-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
