kubernetes/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whattoeat-frontend
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-southeast-1:195275632574:certificate/84eb2f96-d27e-43fd-a84d-b1d070a3ca2d"
    alb.ingress.kubernetes.io/ssl-policy: "ELBSecurityPolicy-TLS13-1-2-2021-06"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'  # Chuyển hướng HTTP sang HTTPS
spec:
  rules:
    - host: dev.product-tracer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whattoeat-frontend
                port:
                  number: 80
